--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -3,11 +3,7 @@ version: 2
 jobs:
   build:
     docker:
-      # The image used to build our project, build
-      # your own using the Dockerfile provided below
-      # and replace here. I put my own image here for
-      # the example.
-      - image: circleci/rust:latest
+      - image: rust:1
 
     steps:
       - checkout
@@ -19,22 +15,21 @@ jobs:
             rustfmt --version
             cargo fmt -- --write-mode=diff
       - run:
-          name: Nightly Build
-          command: |
-            rustup run nightly rustc --version --verbose
-            rustup run nightly cargo --version --verbose
-            rustup run nightly cargo build
+          name: Calculate dependencies
+          command: cargo generate-lockfile
+      - restore_cache:
+          keys:
+            - v4-cargo-cache-{{ arch }}-{{ checksum "Cargo.lock" }}
       - run:
-          name: Stable Build
-          command: |
-            rustup run stable rustc --version --verbose
-            rustup run stable cargo --version --verbose
-            rustup run stable cargo build
-      - run:
-          name: Test
-          command: rustup run stable cargo test
+          name: Build all targets
+          command: cargo build --all --all-targets
       - save_cache:
-          key: project-cache
           paths:
-            - "~/.cargo"
-            - "./target"
+            - /usr/local/cargo/registry
+            - target/debug/.fingerprint
+            - target/debug/build
+            - target/debug/deps
+          key: v4-cargo-cache-{{ arch }}-{{ checksum "Cargo.lock" }}
+      - run:
+          name: Run all tests
+          command: cargo test --all
