--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,11 @@ jobs:
 
     steps:
       - checkout
-      - restore_cache:
-          key: project-cache
+      - run:
+          name: Install rustfmt
+          command: |
+            cargo install --git https://github.com/rust-lang/rustfmt
+            mv /root/.cargo/bin/rustfmt /usr/local/bin
       - run:
           name: Check formatting
           command: |
