--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Install rustfmt
+          command: rustup component add rustfmt --toolchain 1.34.1-x86_64-unknown-linux-gnu
+      - run:
           name: Check formatting
           command: |
             rustfmt --version
